; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_revision.c_logRevCheck.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_revision.c_logRevCheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64 }

@lastLine = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @logRevCheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @logRevCheck(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lastLine, i32 0, i32 2), align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lastLine, i32 0, i32 1), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lastLine, i32 0, i32 0), align 8
  %9 = call i64 @strcmp(i32 %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br label %11

11:                                               ; preds = %6, %1
  %12 = phi i1 [ false, %1 ], [ %10, %6 ]
  %13 = zext i1 %12 to i32
  store i32 %13, i32* %3, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lastLine, i32 0, i32 1), align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @log_rev_check(i32* %14, i32 %15, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %11
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @lastLine, i32 0, i32 0), align 8
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @log_rev_check(i32* %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %20, %11
  ret void
}

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @log_rev_check(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
